# duckdb-graphar

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: analyze-changes.yml  build-n-test.yml
config/: CMakeLists.txt  extension_config.cmake
config/test/: CMakeLists.txt
config/test/scalar_functions/: test_bfs.cpp
config/test/sql/: graphar_duck.test
config/test/sql/graphar/: attach.test  read_edges.test  read_edges_csv.test  read_vertices.test  read_vertices_csv.test
data/snap-musae-github/: import.script.git.yaml  vertices.csv
data/snap-musae-github-csv/: import.script.git.yaml
include/: duckdb_graphar_extension.hpp
include/functions/scalar/: bfs.hpp
include/functions/table/: edges_vertex.hpp  hop.hpp  read_base.hpp  read_edges.hpp  read_vertices.hpp
include/storage/: graphar_catalog_set.hpp  graphar_schema_entry.hpp  graphar_table_set.hpp
include/utils/: func.hpp
scripts/: generate-graphar-data.sh  install-cli.sh
src/: duckdb_graphar_extension.cpp
src/functions/scalar/: bfs.cpp
src/functions/table/: edges_vertex.cpp  hop.cpp  read_edges.cpp  read_vertices.cpp
src/storage/: graphar_catalog_set.cpp  graphar_schema_entry.cpp  graphar_storage.cpp  graphar_table_entry.cpp  graphar_table_set.cpp  graphar_transaction.cpp
src/utils/: func.cpp
test/: CMakeLists.txt  TestGraphGenFixture.hpp
test/scalar_functions/: bfs_tests.cpp  test_bfs.cpp
test/storage/: CMakeLists.txt  test_graphar_storage.cpp
test/table_functions/: CMakeLists.txt  table_functions_fixture.cpp  table_functions_fixture.hpp  test_read_edges.cpp  test_read_vertices.cpp  test_table_functions.hpp
tests/: CMakeLists.txt  README.md
tests/fixture/: basic_graphar_fixture.hpp
tests/scalar_functions/: CMakeLists.txt  scalar_functions_fixture.hpp  test_bfs.cpp
tests/storage/: test_graphar_schema_entry.cpp
tests/table_functions/: CMakeLists.txt  table_functions_fixture.hpp  test_edges_vertex.cpp  test_hop.cpp  test_read_edges.cpp  test_read_vertices.cpp
